--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>This Ts "JS" Code</title>
 </head>
 <body>
+    <p>this is reza</p>
     <h1>Welcome to Mizroshd</h1>
     <p>Everything you need from entrepreneurship to implementation</p>
     <script src="JS/loop.js"></script>
